[package]
name = "protonkt-monitor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.21"
env_logger = "0.10"
hex = "0.4"
hex-literal = "0.4"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.29", features = ["full"] }
x509-parser = "0.15"
